Connected the fonts to CSS

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -1,6 +1,12 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url('styling/fonts/Montserrat/static/Montserrat-Black.ttf') format('truetype');
+    src: url('fonts/Montserrat/static/Montserrat-Black.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Hind_Madurai';
+    src: url('fonts/Hind_Madurai/HindMadurai-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -10,6 +16,6 @@
 .headings{
     color: #F2C063;
 }
-body {
-    color: #F7F0DD;
+p {
+    font-family: 'Hind_Madurai';
 }
