Changed nav link color

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -45,9 +45,9 @@ ul {
   
   li a {
     display: block;
-    color: white;
     text-align: center;
     padding: 14px 16px;
+    color: #F7F0DD;
     text-decoration: none;
   }
   
