properly hide tab2 content from tab1

--- a/styling/dashStyles.css
+++ b/styling/dashStyles.css
@@ -53,7 +53,8 @@
 }
 
 .tabcontent {
-    display:flex;
+    display: none;
+    /* display:flex; */
     flex-direction: column;
     color: #324373;
     background-color:#F7F0DD;
